<resources>
    <string name="app_name">IDEA</string>
    <string name="welcome_message">Welcome, %s</string>
    <string name="welcome_message_test">Welcome, Seline</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_logout">Log Out</string>
    <string name="text_recommended">Recommended</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idea_facebook">IDEA Furniture F.D.S.R.</string>
    <string name="idea_instagram">\u0040idea_furniture_fdsr</string>
    <string name="idea_web">www.ideafurniture-fdsr.com</string>
    <string name="idea_copyright">© 2022 | F.D.S.R. IDEAfurniture</string>
    <string name="about_paragraph">Our application certainly provides a variety of products that can help, facilitate your activities for the better. For example, Sofa Couch: Hemligby which can provide comfort when sitting and recommended to be placed in the family room. This is because this product is made of high-quality materials that can certainly give a calm vibe when having a conversation with family.</string>
    <string name="idea_logo">IDEA Logo</string>
    <string name="login_prompt_text">Please login to continue</string>
    <string name="username_label">Username</string>
    <string name="username_placeholder">xxxxxxxx</string>
    <string name="password_placeholder">******</string>
    <string name="password_label">Password</string>
    <string name="login_text">Login</string>

    <string name="password_error_message">password must not be empty</string>
    <string name="username_length_error_message">username must be between 8–24</string>
    <string name="username_empty_error_message">username must not be empty</string>
    <string name="price_data">Rp. 2.000.000</string>
    <string name="price_label">Price :</string>
    <string name="products_quantuty_prompt">How many products do you want to buy?</string>
    <string name="quantity_label">Quantity :</string>
    <string name="buy_now_text">Buy Now</string>
    <string name="input_hint">1</string>

</resources>