<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/idea_logo"
        android:src="@drawable/idea_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_prompt_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/username_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_prompt" />

    <RelativeLayout
        android:id="@+id/username_field_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="4dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_label">

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorTransparent"
            android:hint="@string/username_placeholder"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/password_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_field_wrapper" />

    <RelativeLayout
        android:id="@+id/password_field_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="4dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_label">

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:background="@color/colorTransparent"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/button_background"
        android:textColor="@color/button_text_color"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_text"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_field_wrapper" />


</androidx.constraintlayout.widget.ConstraintLayout>